# Agentic_AI

./: .gitignore  Agentic_AI.code-workspace  Basic_chatbot.ipynb  pyproject.toml
MCP_From_Scratch/: client.py  mathServer.py  pyproject.toml  weather.py
env_file/: pyvenv.cfg
env_file/Scripts/: activate  activate.bat
