[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-groq>=0.3.5",
    "langchain-tavily>=0.2.7",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "MCP_From_Scratch/mcp_env/Scripts",
]
